--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,119 @@
 body {
-  background-color: #141218;
+  background: linear-gradient(
+    179deg,
+    rgba(197, 7, 4, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+
   font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 1.5;
   color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-image: url("../assets/hero.png");
-  background-repeat: no-repeat;
-  background-position: top right;
+}
+.header {
+  width: 100%;
+}
+
+.container {
+  width: 95%;
+  max-width: 1135px;
+  margin: auto;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.genre {
+  display: block;
+  margin-bottom: 16px;
+  animation-delay: 0.1s;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  animation-delay: 0.3s;
+}
+
+.rating-number {
+  margin-left: 19px;
+  font-weight: 400;
+}
+
+.main-title {
+  font-family: "MasonChronicles", serif;
+  font-weight: 500;
+  font-size: 76px;
+  line-height: 89px;
+  margin-bottom: 10px;
+  animation-delay: 0.5s;
+}
+
+.main-description {
+  max-width: 458px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  line-height: 150%;
+  margin-bottom: 40px;
+  animation-delay: 0.7s;
+}
+
+.main-content {
+  display: flex;
+  align-items: center;
+  margin-bottom: 85px;
+}
+
+.content__fact-label {
+  font-weight: 400;
+  display: inline-block;
+  width: 130px;
+}
+
+.play-button {
+  width: fit-content;
+  margin-top: 90px;
+}
+
+.play {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #bd0703;
+  width: 100px;
+  height: 100px;
+  border: none;
+  border-radius: 50%;
+  position: relative;
+  margin: auto;
+}
+
+.playImg {
+  position: relative;
+  transform: translateX(5px);
+}
+
+.play::before {
+  content: "";
+  width: 132px;
+  height: 132px;
+  background: #9d2929;
+  opacity: 0.5;
+  position: absolute;
+  border-radius: 50%;
+  left: -16px;
+  top: -16px;
+  animation: pulse 0.7s ease-in-out 1.5s infinite;
 }
 
 .swiper {
@@ -21,8 +124,6 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -37,4 +138,14 @@ body {
 .swiper {
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (max-width: 400px) {
+  .menu-list {
+    display: flex;
+    justify-content: center;
+  }
+  .content {
+    display: block;
+  }
 }
