--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@ body {
     rgba(197, 7, 4, 1) 0%,
     rgba(0, 0, 0, 1) 100%
   );
-
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 300;
@@ -12,12 +13,19 @@ body {
   line-height: 1.5;
   color: #ffffff;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
+
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .header {
   width: 100%;
+}
+
+.menu-list {
+  max-width: 300px;
 }
 
 .container {
@@ -29,7 +37,7 @@ body {
 .content {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .genre {
@@ -68,10 +76,15 @@ body {
   animation-delay: 0.7s;
 }
 
-.main-content {
-  display: flex;
-  align-items: center;
-  margin-bottom: 85px;
+.content-image {
+  max-width: 45vw;
+}
+
+.hero,
+.logo {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
 }
 
 .content__fact-label {
@@ -116,9 +129,97 @@ body {
   animation: pulse 0.7s ease-in-out 1.5s infinite;
 }
 
+/* slider */
+
+.card {
+  width: 164px;
+  height: 113px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 13px;
+  margin-right: 30px;
+}
+
+.card-subtitle {
+  font-size: 14px;
+  line-height: 12px;
+  margin-bottom: 2px;
+  font-weight: 400;
+}
+
+.serie-title {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 300;
+}
+
+.series {
+  display: flex;
+  align-items: center;
+  margin-bottom: 60px;
+  position: relative;
+}
+
+.series-1 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/alien_1979.png");
+}
+
+.series-2 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/aliens_1986.png");
+}
+
+.series-3 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/alien_3_1992.png");
+}
+
+.series-4 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/alien_resurrection_1997.png");
+}
+
+.series-5 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/aliens_vs_predator_2004.png");
+}
+
+.series-6 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/alien_predator_2007.png");
+}
+
+.series-7 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/prometheus_2012.png");
+}
+
+.series-8 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2d2d2d 100%),
+    url("../assets/series/alien_covenant_2017.png");
+}
+
+.card {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .swiper {
-  width: 100%;
   height: 100%;
+  padding: 40px;
+  background-color: rgb(13, 11, 10);
+  border-radius: 20px;
+  background: linear-gradient(
+    179deg,
+    rgba(13, 11, 10, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  display: flex;
+  align-items: center;
 }
 
 .swiper-slide {
@@ -140,10 +241,30 @@ body {
   margin-right: auto;
 }
 
+.swiper-button-next,
+.swiper-button-prev {
+  color: #ffffff;
+}
+
+.footer {
+  height: 30px;
+  text-align: center;
+  color: gray;
+  padding: 0px 40px 0px 40px;
+}
+
+@media (max-width: 800px) {
+  .swiper {
+    display: none;
+  }
+}
+
 @media (max-width: 400px) {
   .menu-list {
+    width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
   }
   .content {
     display: block;
